# AIStack-MCP

./: .coveragerc  .cursorignore  .cursorrules  .env.example  .gitignore  CHANGELOG.md  FIXES_APPLIED.md  LICENSE  MCP_CONNECTION_ISSUE.md  MCP_FIXES.md  MCP_TROUBLESHOOTING.md  README.md  SECURITY.md  TESTING_CHECKLIST.md  docker-compose.yml  mcp_intelligence_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_mcp_fix.ps1
.cursor/: mcp.json  mcp.json.example  mcp.json.example.uv  mcp.json.example.virtualenv  mcp_settings.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: dependabot-auto-merge.yml  lint.yml  test.yml  validate-config.yml
docs/: BEST_PRACTICES.md  GITHUB_MCP_SETUP.md  LOCAL_SERVERS_SETUP.md  MCP_TOOLS.md  PRODUCTION_MCP.md  REGISTRY.md  REGISTRY_FILTERS.md  SCREENSHOTS.md  SETUP.md  TEMPLATES.md  TEST_RESULTS.md  WORKSPACE_PATTERN.md
docs/troubleshooting/: CURSOR_CONSOLE_CHECK.md  FIND_MCP_ERRORS.md  FIXES_APPLIED.md  MCP_CONNECTION_ISSUE.md  MCP_FIXES.md  MCP_TROUBLESHOOTING.md  VERIFY_FIX.md  WHAT_TO_CHECK.md  WINDOWS_FIX_SUMMARY.md  WINDOWS_MCP_FIX.md  check_mcp_connection.md
mcp_registry/: __init__.py  client.py  installer.py  templates.py
python_agent/: README.md  __init__.py  mcp_production_server.py  requirements.txt  setup.ps1
python_agent/agents/: impact_analysis_agent.py
python_agent/config/: settings.py
python_agent/tools/: code_rag_tools.py  rag_tools.py
scripts/: apply_template.ps1  clear_registry_cache.ps1  dev_all.ps1  install_community_tool.ps1  launch_mcp_for_repo.ps1  link_repo.ps1  list_registry_tools.ps1  mcp_config_builder.py  quickstart.ps1  reindex_workspace.py  run_github_mcp.ps1  switch_to_multi_repo.ps1  switch_to_single_repo.ps1  test_mcp_environment.py  test_mcp_fix_simple.ps1  test_workspace_pattern.py  validate_mcp_config.py  validate_workspace.py
templates/: full.json  minimal.json  standard.json
tests/: README.md  __init__.py  conftest.py  requirements-test.txt
tests/unit/: __init__.py  test_codegen.py  test_embeddings.py  test_patterns.py  test_semantic_search.py
workspaces/: README.md
